@@ -149,7 +149,7 @@ rct_window* WindowNetworkStatusOpen(const char* text, close_callback onClose);
 rct_window* WindowNetworkStatusOpenPassword();
 void WindowNetworkStatusClose();
 
-void WindowTextInputKey(rct_window* w, char keychar);
+void WindowTextInputKey(rct_window* w, uint32_t keycode);
 void WindowTextInputOpen(
     rct_window* call_w, WidgetIndex call_widget, StringId title, StringId description, const Formatter& descriptionArgs,
     StringId existing_text, uintptr_t existing_args, int32_t maxLength);
